--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,12 +1,22 @@
 # Uncomment the following line to enable deep sleep
-# CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=y
 
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Enable eager debouncing
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
+# CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+# CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 # CONFIG_ZMK_USB_LOGGING=y
+
+CONFIG_ZMK_KEYBOARD_NAME="Corne Keyboard"
+
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
