--- a/config/corne.conf
+++ b/config/corne.conf
@@ -14,7 +14,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 # CONFIG_ZMK_USB_LOGGING=y
 
-CONFIG_ZMK_KEYBOARD_NAME="Corne Keyboard"
+CONFIG_ZMK_KEYBOARD_NAME="Corne MX"
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
